apps/base/selfhosted/cryptpad/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: crypt-pad-headers
  namespace: selfhosted
spec:
  headers:
    contentSecurityPolicy: "default-src 'none'; style-src 'unsafe-inline' 'self' https://cryptpad.thekitty.zone; font-src 'self' data: https://cryptpad.thekitty.zone; child-src https://cryptpad.thekitty.zone; frame-src 'self' blob: https://sc.thekitty.zone; connect-src 'self' blob: https://cryptpad.thekitty.zone https://sc.thekitty.zone wss://cryptpad.thekitty.zone; img-src 'self' data: blob: https://cryptpad.thekitty.zone; media-src blob:; frame-ancestors 'self' https://cryptpad.thekitty.zone;  [...]
    customRequestHeaders:
      cross-origin-embedder-policy: "require-corp"
      cross-origin-resource-policy: "cross-origin"
    customResponseHeaders:
      cross-origin-embedder-policy: "require-corp"
      cross-origin-resource-policy: "cross-origin"
